examples/negative/type_invariants/return_type_mismatch.kai
# Negative fixture (#520 / type system): a fn declares
# `: Int` as its return type but the body produces `String`.
# Typer must reject with a return-type mismatch anchored at
# the body expression.

fn f() : Int = "hello"

fn main() : Int = f()
